syntax = "proto3";

package chat;

service ChatService {
  rpc InsertRoom (Room) returns (Room);
  rpc ListRooms (Empty) returns (RoomList);
  rpc InsertMessage (Message) returns (Message);
  rpc ListMessages (Int32Id) returns (MessageList);
  rpc WatchRoom (Int32Id) returns (stream Message);
}

message Empty {}
message Int32Id { 
    int32 id = 1; 
}

message Room {
  int32 id = 1;
  string title = 2;
  string createdBy = 3;
  int64 createdAt = 4;
}

message RoomList { 
    repeated Room rooms = 1; 
}

message Message {
  int32 id = 1;
  string text = 2;
  string createdBy = 3;
  int64 createdAt = 4;
  int32 room = 5;
}

message MessageList { 
    repeated Message messages = 1; 
}
